feat(authentication): add user-migration endpoint and token
